# brick

./: Cargo.toml  Justfile  README.md  rust-toolchain.toml
i18n/en/: brick.ftl
src/: cli.rs  error.rs  lib.rs  macros.rs  main.rs
src/packer/: mod.rs  tar.rs
tests/: cli.rs
