[package]
name = "brick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["cargo", "unstable-grouped"] }
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.16"
tar = "0.4.38"
thiserror = "1.0.30"
walkdir = "2.3.2"

[dev-dependencies]
env_logger = "0.9.0"
pretty_assertions = "1.2.1"
tempfile = "3.3.0"
