[package]
name = "brick"
version = "0.1.0"
authors = ["Nikolai Zimmermann <nikolai@chronophylos.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["cargo", "unstable-grouped"] }
env_logger = "0.9.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
itertools = "0.10.3"
log = "0.4.16"
once_cell = "1.10.0"
rust-embed = "6.4.0"
tar = "0.4.38"
thiserror = "1.0.30"
unic-langid = "0.9.0"
walkdir = "2.3.2"
tempfile = "3.3.0"

[dev-dependencies]
assert_cmd = "2.0.4"
env_logger = "0.9.0"
predicates = "2.1.1"
pretty_assertions = "1.2.1"
